# tomato-api

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  devlist.py  pyproject.toml  requirements.txt
.claude/: settings.json
src/: __init__.py  devlist.py  find_device.py  hostname_lookup.py  staticlist.py  unknown_devices.py
src/routers/: __init__.py  base.py  netgear.py  pfsense.py  ssl_helpers.py  tomato.py  tplink.py
tests/: conftest.py  test_devlist.py  test_find_device.py  test_hostname_lookup.py  test_router_base.py  test_router_factory.py  test_router_tomato.py  test_ssl_helpers.py  test_staticlist.py
tests/fixtures/: asus_status_devices.html
