[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tomato-api"
version = "1.0.0"
description = "Python API to communicate with Tomato Router"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Steven Aubertin"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
]
keywords = ["tomato", "router", "network", "dhcp", "arp"]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "responses>=0.23.0",
]

[project.scripts]
tomato-devlist = "devlist:main"

[project.urls]
Homepage = "https://github.com/x0r/tomato-api"
Repository = "https://github.com/x0r/tomato-api"
Issues = "https://github.com/x0r/tomato-api/issues"

[tool.setuptools]
py-modules = ["devlist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
